--- a/index.html
+++ b/index.html
@@ -3,27 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Corrected meta tag -->
     <title>Microsite</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-<div class="section section--dark" id="hero">
-<div class="section__content">
-<div class="banner">
-    <img. src="./images/logo.png" alt="Site Logo" class="banner__logo">
-        <span>hello</span>
-</div>
-    <div class="ctabox"></div>
-    <h1 class=" ctabox__heading">web development professionals.</h1>
-    <div class="ctabox__content">
-<p>
-    Lorem ipsum dolor sit,amet consectetur adipisicing elit.Illo dolorum id nesciunt numquam?
-    ab nihil accusantium eum similique mollitia aspernatur ipsam fug. yftfgdrfg.
-
-</p>
+<div class="section section--dark" id="hero"  style="background-image: url('/images/landing.jpg');">
+    <div class="section__content">
+        <div class="banner">
+            <img src="/images/logo.png" alt="Site Logo" class="banner__logo"> <!-- Added closing tag for <img> -->
+            <span>hello</span>
+        </div>
+        <div class="ctabox"></div> <!-- Corrected the class name -->
+        <h1 class="ctabox__heading">web development professionals.</h1> <!-- Corrected the class name -->
+        <div class="ctabox__content">
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo dolorum id nesciunt numquam?
+                Ab nihil accusantium eum similique mollitia aspernatur ipsam fug. yftfgdrfg.
+            </p>
+        </div>
     </div>
-</div>
 </div>
 </body>
 </html>
