--- a/index.html
+++ b/index.html
@@ -5,24 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Corrected meta tag -->
     <title>Microsite</title>
+    <link rel="stylesheet" href="./lib/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="/css/main.css">
+    <script src="https://kit.fontawesome.com/d2cbcc4adf.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="section section--dark" id="hero"  style="background-image: url('/images/landing.jpg');">
+<div class="section section--dark" id="hero" style="background-image: url('/images/landing.jpg');">
     <div class="section__content">
         <div class="banner">
             <img src="/images/logo.png" alt="Site Logo" class="banner__logo"> <!-- Added closing tag for <img> -->
-            <span>hello</span>
+            <div class="icongroup">
+                <a class="icongroup__icon" href="./" title="find us on facebook"><i class="fab fa-facebook"></i>
+                </a>
+                <a class="icongroup__icon" href="./" title="find us on twitter">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a class="icongroup__icon" href="./" title="Check out our youtube channel ">
+                    <i class="fab fa-youtube"></i>
+                </a>
+            </div>
         </div>
-        <div class="ctabox"></div> <!-- Corrected the class name -->
-        <h1 class="ctabox__heading">web development professionals.</h1> <!-- Corrected the class name -->
-        <div class="ctabox__content">
+        <div class="ctabox">
+            <h1 class="ctabox__heading">web development professionals.</h1>
+            <div class="ctabox__content">
+                <p class="white__p">
+                    Meow Meow Meow Meow Meow.<i class="fa-regular fa-face-laugh-wink"></i>
+                </p>
+                <p>
+                    <a href="./" class="button" title="watch the video">
+                        WATCH THE VIDEO
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="section">
+        <div class="section__content">
+            <h1>Do you like cats?</h1>
             <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo dolorum id nesciunt numquam?
-                Ab nihil accusantium eum similique mollitia aspernatur ipsam fug. yftfgdrfg.
+                Let's speak cat language.
+            </p>
+            <p>
+                <strong> We all love cats meow </strong>
+            </p>
+            <p>
+                <a href="./" class="button" title+"My Website">
+                        Meow Website
+                </a>
             </p>
         </div>
     </div>
+
 </div>
+
+
 </body>
 </html>
