--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Corrected meta tag -->
     <title>Microsite</title>
-    <link rel="stylesheet" href="./lib/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="https://kit.fontawesome.com/d2cbcc4adf.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="section section--dark" id="hero" style="background-image: url('/images/landing.jpg');">
+<div class="section section--dark" id="hero" style="background-image: url('images/landing.jpg');">
     <div class="section__content">
         <div class="banner">
-            <img src="/images/logo.png" alt="Site Logo" class="banner__logo"> <!-- Added closing tag for <img> -->
+            <img src="images/logo.png" alt="Site Logo" class="banner__logo"> <!-- Added closing tag for <img> -->
             <div class="icongroup">
                 <a class="icongroup__icon" href="./" title="find us on facebook"><i class="fab fa-facebook"></i>
                 </a>
